decafexpr/output/test/llvm/2param.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/2param.llvm:7:1: error: expected instruction opcode
}
^
